--- a/app/src/main/res/layout/card_weather.xml
+++ b/app/src/main/res/layout/card_weather.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="viewModel" type="br.com.weatherapp.ui.card.WeatherCardViewModel" />
+        <variable name="viewModel" type="br.com.weatherapp.ui.card.WeatherCard" />
     </data>
 
     <androidx.cardview.widget.CardView
