--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="fontTitle">14sp</dimen>
+    <dimen name="fontSubTitle">12sp</dimen>
+    <dimen name="fontLabel">10sp</dimen>
 </resources>
