--- a/app/src/main/res/layout/card_city.xml
+++ b/app/src/main/res/layout/card_city.xml
@@ -22,7 +22,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="@{viewModel.city}"
+                android:text="@{viewModel.city.name}"
                 android:onClick="@{viewModel::onCityClick}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
